--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -559,7 +559,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -581,7 +581,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -1036,7 +1036,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -1058,7 +1058,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -1504,7 +1504,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -1526,7 +1526,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -2062,7 +2062,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -2084,7 +2084,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -2481,7 +2481,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -2503,7 +2503,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -2966,7 +2966,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -2988,7 +2988,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -3400,7 +3400,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -3422,7 +3422,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -3785,7 +3785,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -3807,7 +3807,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
@@ -4217,7 +4217,7 @@
                                     "description": "Authorization header configuration for the client. This is mutually exclusive with BasicAuth and is only available starting from Alertmanager v0.22+.",
                                     "properties": {
                                       "credentials": {
-                                        "description": "The secret's key that contains the credentials of the request",
+                                        "description": "Selects a key of a Secret in the namespace that contains the credentials for authentication.",
                                         "properties": {
                                           "key": {
                                             "description": "The key of the secret to select from.  Must be a valid secret key.",
@@ -4239,7 +4239,7 @@
                                         "x-kubernetes-map-type": "atomic"
                                       },
                                       "type": {
-                                        "description": "Set the authentication type. Defaults to Bearer, Basic will cause an error",
+                                        "description": "Defines the authentication type. The value is case-insensitive. \n \"Basic\" is not a supported value. \n Default: \"Bearer\"",
                                         "type": "string"
                                       }
                                     },
