--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -341,6 +341,14 @@
                     },
                     "type": "array"
                   },
+                  "scheme": {
+                    "description": "Configures the protocol scheme used for requests. If empty, Prometheus uses HTTP by default.",
+                    "enum": [
+                      "HTTP",
+                      "HTTPS"
+                    ],
+                    "type": "string"
+                  },
                   "staticConfigs": {
                     "description": "StaticConfigs defines a list of static targets with a common label set.",
                     "items": {
