--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -3592,11 +3592,12 @@ spec:
                         properties:
                           apiURL:
                             description: The Webex Teams API URL i.e. https://webexapis.com/v1/messages
+                            pattern: ^https?://.+$
                             type: string
                           httpConfig:
                             description: The HTTP client's configuration. You must
-                              use this configuration to supply the bot token as part
-                              of the HTTP `Authorization` header.
+                              supply the bot token via the `httpConfig.authorization`
+                              field.
                             properties:
                               authorization:
                                 description: Authorization header configuration for
@@ -3946,6 +3947,7 @@ spec:
                           roomID:
                             description: ID of the Webex Teams room where to send
                               the messages.
+                            minLength: 1
                             type: string
                           sendResolved:
                             description: Whether to notify about resolved alerts.
