--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -3619,8 +3619,9 @@ spec:
                                   v0.22+.
                                 properties:
                                   credentials:
-                                    description: The secret's key that contains the
-                                      credentials of the request
+                                    description: Selects a key of a Secret in the
+                                      namespace that contains the credentials for
+                                      authentication.
                                     properties:
                                       key:
                                         description: The key of the secret to select
@@ -3641,8 +3642,9 @@ spec:
                                     type: object
                                     x-kubernetes-map-type: atomic
                                   type:
-                                    description: Set the authentication type. Defaults
-                                      to Bearer, Basic will cause an error
+                                    description: "Defines the authentication type.
+                                      The value is case-insensitive. \n \"Basic\"
+                                      is not a supported value. \n Default: \"Bearer\""
                                     type: string
                                 type: object
                               basicAuth:
