chore: make generate format

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -3606,6 +3606,8 @@ spec:
                         properties:
                           apiURL:
                             description: The Webex Teams API URL i.e. https://webexapis.com/v1/messages
+                              Provide if different from the default API URL.
+                            pattern: ^https?://.+$
                             type: string
                           httpConfig:
                             description: The HTTP client's configuration. You must
