--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -3623,6 +3623,8 @@ spec:
                         properties:
                           apiURL:
                             description: The Webex Teams API URL i.e. https://webexapis.com/v1/messages
+                              Provide if different from the default API URL.
+                            pattern: ^https?://.+$
                             type: string
                           httpConfig:
                             description: The HTTP client's configuration. You must
@@ -8341,6 +8343,7 @@ spec:
                         properties:
                           apiURL:
                             description: The Webex Teams API URL i.e. https://webexapis.com/v1/messages
+                            pattern: ^https?://.+$
                             type: string
                           httpConfig:
                             description: The HTTP client's configuration. You must
